removes all to start from starting